--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
+MONGO_URI=mongodb://localhost:27017/techhub
+JWT_SECRET=your_jwt_secret_key
 PORT=5000
-DATABASE_URL=postgres://your_username:your_password@localhost:5432/techhub
-JWT_SECRET=supersecretkey
